--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body>
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
-  Absolute Path (external link)
+  <a href="https://code.visualstudio.com/docs/?dv=osx">Absolute Path (external link)</a>
 
-  <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
-  Relative Path (internal link)
+  <!-- Challenge 2: Wrap the text below with a link that has a relative path to -->
+  <a href="about.html">Relative Path (internal link)</a>
 
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion">
+  <a img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion" target="_blank"></a>
 
 </body>
 </html>
